Fixing dockerfile